# medical-image-segmentation-architectures

./: .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  ROADMAP.md  mkdocs.yml  project-starter.md  pyproject.toml  tracker.md
.github/workflows/: ci.yml  pages.yml  sync-hf-space.yml
data/: architectures.yml
demos/: demo_forward_pass.py
docs/: glossary.md  index.md  references.md
docs/appendix/: general-segmentation-context.md
docs/architectures/: 3d-unet.md  attention-unet.md  cellpose.md  deeplabv3plus.md  fcn.md  index.md  medsam.md  medsam2.md  multiresunet.md  nnunet.md  r2unet.md  resunet-style-variants.md  sam-med2d.md  sam-med3d.md  segresnet.md  segvol.md  selection-guide.md  stardist-3d.md  swin-unet.md  swin-unetr.md  transunet.md  u2net.md  unet.md  unet3plus.md  unetpp.md  unetr.md  vnet.md  wnet3d.md
docs/architectures/unet/: code.md  cookbook.md  live-example.md
docs/assets/javascripts/: diagram-viewer.js
docs/assets/stylesheets/: diagram-viewer.css
docs/contributing/: adding-an-architecture.md  architecture-checklist.md  architecture-template.md  code-change-checklist.md  index.md  metadata-conventions.md
docs/evolution/: lineage.md
docs/foundations/: evaluation-metrics.md  how-to-read-an-architecture.md  training-and-evaluation-basics.md  what-is-segmentation.md
scripts/: validate_architecture_metadata.py  validate_artifacts.py  validate_references.py
spaces/unet-demo/: README.md  app.py  requirements.txt
spaces/unet-demo/examples/: README.md
src/medseg_architectures/: __init__.py  inspection.py  metrics.py  registry.py
tests/: test_architecture_metadata_validation.py  test_architecture_registry.py  test_artifact_validation.py  test_documentation_sync.py  test_inspection.py  test_metrics.py  test_model_shapes.py  test_synthetic_segmentation.py
(+4 files in other folders)
