[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medseg-architectures"
version = "0.1.0"
description = "Research-to-code map of medical image segmentation architectures."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pyyaml",
  "torch",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]
docs = [
  "mkdocs",
  "mkdocs-material",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medseg_architectures"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts", "demos"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
